PanelView: Fix popups position when NoBackground hint is set

Popups now align to the mask, without it they appear in the wrong position
always create it and show blur and contrast when needed

BUG:494193


(cherry picked from commit 7f17a5bb60a728ca4d36fbc705bdb4b0c59f4be4)

Co-authored-by: Luis Bocanegra <luisbocanegra17b@gmail.com>